--- a/ds_server/tsconfig.json
+++ b/ds_server/tsconfig.json
@@ -6,5 +6,6 @@
     "sourceMap": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
