--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: frontend
     networks:
       - my_network
-    #depends_on:
-    #  - backend
+    depends_on:
+      - backend
     #ports:
     #  - "8080:8080" 
     
