--- a/docker-compose/templates/backend-service.yaml
+++ b/docker-compose/templates/backend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -c
+    kompose.cmd: kompose convert -f docker-compose.yml -c
     kompose.version: 1.33.0 (3ce457399)
   labels:
     io.kompose.service: backend
