--- a/docker-compose/templates/frontend-deployment.yaml
+++ b/docker-compose/templates/frontend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -c
+    kompose.cmd: kompose convert -f docker-compose.yml -c
     kompose.version: 1.33.0 (3ce457399)
   labels:
     io.kompose.service: frontend
@@ -15,7 +15,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert -c
+        kompose.cmd: kompose convert -f docker-compose.yml -c
         kompose.version: 1.33.0 (3ce457399)
       labels:
         io.kompose.network/ds-project-my-network: "true"
