--- a/ds_server/package.json
+++ b/ds_server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "node dist/index.js"
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
   },
   "author": "sunny",
   "license": "ISC",
