--- a/ds_client/Dockerfile
+++ b/ds_client/Dockerfile
@@ -2,12 +2,12 @@ FROM node:latest
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json package-lock.json ./
 
-RUN npm i
+RUN npm install
 
 COPY . .
 
+EXPOSE 8080
+
 CMD ["npm", "run", "dev"]
-
-
