--- a/ds_server/Dockerfile
+++ b/ds_server/Dockerfile
@@ -2,14 +2,12 @@ FROM node:latest
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json package-lock.json ./
 
-RUN npm i
+RUN npm install
 
 COPY . .
 
+EXPOSE 3001
 
-
-CMD ["npm", "run", "dev"]
-
-
+CMD ["npm", "start"]
