Uncomment lines in backupVolume section of values.yaml

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -60,8 +60,8 @@ mongodbEnv:
 backupVolume:
   name: backup-storage
   mountPath: /backup
-#  accessMode: 
-#  storage: 
+  accessMode: ReadWriteOnce
+  storage: 10Gi
 #  storageClassName:
 
 backupContainer:
