Update values.yaml by fixing mongodb environment variables
Unneeded quotes

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -54,8 +54,8 @@ mongodbVolume:
   storageClassName: local-path  # Rancher
 
 mongodbEnv:
-  MONGO_INITDB_ROOT_USERNAME: "myUser"
-  MONGO_INITDB_ROOT_PASSWORD: "myPassword"
+  MONGO_INITDB_ROOT_USERNAME: myUser
+  MONGO_INITDB_ROOT_PASSWORD: myPassword
 
 backupVolume:
   name: backup-storage
