--- a/helm-chart/templates/backend-hpa.yaml
+++ b/helm-chart/templates/backend-hpa.yaml
@@ -1,19 +1,13 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: backend-hpa
-  namespace: ds-project
+  namespace: {{ .Values.namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: backend
+    name: fastapi
   minReplicas: {{ .Values.backendHpa.minReplicas }}
   maxReplicas: {{ .Values.backendHpa.maxReplicas }}
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: {{ .Values.backendHpa.targetCPUUtilizationPercentage}}
+  targetCPUUtilizationPercentage: {{ .Values.backendHpa.targetCPUUtilizationPercentage}}
