--- a/helm-chart/templates/backend-hpa.yaml
+++ b/helm-chart/templates/backend-hpa.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: fastapi
+    name: backend
   minReplicas: {{ .Values.backendHpa.minReplicas }}
   maxReplicas: {{ .Values.backendHpa.maxReplicas }}
   targetCPUUtilizationPercentage: {{ .Values.backendHpa.targetCPUUtilizationPercentage}}
