--- a/helm-chart/templates/frontend-hpa.yaml
+++ b/helm-chart/templates/frontend-hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: frontend-hpa
-  namespace: ds-project
+  namespace: {{ .Values.namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -10,10 +10,4 @@ spec:
     name: frontend
   minReplicas: {{ .Values.frontendHpa.minReplicas }}
   maxReplicas: {{ .Values.frontendHpa.maxReplicas }}
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: {{ .Values.frontendHpa.targetCPUUtilizationPercentage}}
+  targetCPUUtilizationPercentage: {{ .Values.frontendHpa.targetCPUUtilizationPercentage}}
