--- a/helm-chart/templates/mongodb-deployment.yaml
+++ b/helm-chart/templates/mongodb-deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME }}
         - name: MONGO_INITDB_ROOT_PASSWORD
-          value: { .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }
+          value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }}
 
         volumeMounts:
         - name: {{ .Values.mongodbVolume.name }}
