--- a/helm-chart/templates/backup-cronjob.yaml
+++ b/helm-chart/templates/backup-cronjob.yaml
@@ -26,4 +26,4 @@ spec:
           volumes:
           - name: {{ .Values.backupVolume.name }}
             persistentVolumeClaim:
-              claimName: mongodb-pvc
+              claimName: backup-pvc
