Update values.yaml with placeholder email
for ACME registration

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -2,6 +2,8 @@ namespace: ds-project
 
 host: our-subdomain.cloudns.net
 
+acmeEmail: placeholder@provider.com  # change this as needed
+
 frontendImage:
   repository: peripetie/sapesu-server
   tag: latest
