--- a/helm-chart/templates/ingress.yaml
+++ b/helm-chart/templates/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ds-project
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/issuer: letsencrypt-prod  # This will be detected by CertManager and it will use the issuer we defined.
 spec:
   rules:
   - host: {{ .Values.host }}
