Authentication for database enabled

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,15 +25,23 @@ services:
       - sapesu
     volumes:
       - ./ds_server:/app
+    env_file:
+      - ./ds_server/.env
 
   mongo:
     build:
-      context: ./mongo_db
+      context: ./ds_database
     container_name: mongo
     ports:
       - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ds_root
+      MONGO_INITDB_ROOT_PASSWORD: ds_root_password
+      MONGO_INITDB_DATABASE: messages
+
     networks:
       - sapesu
+
 networks:
   sapesu:
     driver: bridge
