Update mongodb-deployment.yaml with environment variables

--- a/helm-chart/templates/mongodb-deployment.yaml
+++ b/helm-chart/templates/mongodb-deployment.yaml
@@ -23,6 +23,16 @@ spec:
           value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME }}
         - name: MONGO_INITDB_ROOT_PASSWORD
           value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }}
+        - name: MONGO_INITDB_DATABASE
+          value: {{ .Values.mongodbEnv.MONGO_INITDB_DATABASE }}
+        - name: DATABASE_HOST
+          value: {{ .Values.mongodbEnv.DATABASE_HOST }} 
+        - name: DATABASE_PORT
+          value: {{ .Values.mongodbEnv.DATABASE_HOST }}
+        - name: DATABASE_COLLECTION
+          value: {{ .Values.mongodbEnv.DATABASE_COLLECTION }}
+        - name: SERVER_PORT
+          value: {{ .Values.mongodbEnv.SERVER_PORT }}
 
         volumeMounts:
         - name: {{ .Values.mongodbVolume.name }}
