--- a/Project-Helm/project/values.yaml
+++ b/Project-Helm/project/values.yaml
@@ -54,8 +54,8 @@ mongodbVolume:
 #  storageClassName:
 
 mongodbEnv:
-  MONGO_INITDB_ROOT_USERNAME: "myUser"
-  MONGO_INITDB_ROOT_PASSWORD: "myPassword"
+  MONGO_INITDB_ROOT_USERNAME: "ds_root"
+  MONGO_INITDB_ROOT_PASSWORD: "ds_password"
   MONGO_INITDB_DATABASE: "messages"
   DATABASE_HOST: "mongo"
   DATABASE_PORT: "27017"
