--- a/backend-helm-chart/templates/backend-deployment.yaml
+++ b/backend-helm-chart/templates/backend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  namespace: ds-project
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: 2
   selector:
@@ -16,14 +16,16 @@ spec:
       containers:
       - name: backend
         image: {{ .Values.backendImage.repository }}:{{ .Values.backendImage.tag }}
+        imagePullPolicy: {{ .Values.backendImage.pullPolicy }}
         ports:
         - containerPort: {{ .Values.backendService.containerPort }}
+      restartPolicy: {{ .Values.backendImage.restartPolicy }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.backendService.name }}
-  namespace: ds-project
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: backend
