Fix helm chart install commands in deploy.sh

--- a/server-backend-helm-chart/HELM/Chart.yaml
+++ b/server-backend-helm-chart/HELM/Chart.yaml
@@ -6,5 +6,6 @@ maintainers:
   - name: Peregrine Wade
     email: peregrinewade@gmail.com
   - name: Salvador Benites
-    email: insert email here
-  - name: Sunny Eyles
+    email: s.b@outlook.de
+
+  
