Changed, this should work

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           IMAGE_NAME: sunnyeyles/ds_client
         run: |
-          docker build -t $IMAGE_NAME:1.0 -f ../../project/ds_client/Dockerfile ../../project/ds_client
+          docker build -t sunnyeyles/ds_client:1.0 -f ../../ds_client/Dockerfile ../../ds_client
           docker push $IMAGE_NAME:latest
 
       - name: Logout from Docker Hub
