--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -22,16 +22,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Build and push Docker image
-      #   env:
-      #     IMAGE_NAME: sunnyeyles/ds_client
-      #   run: |
-      #     docker build -t sunnyeyles/ds_client:1.0 -f ../../ds_client/Dockerfile ../../ds_client
-      #     docker push $IMAGE_NAME:latest
-
-      # - name: Logout from Docker Hub
-      #   run: docker logout
-
       - name: Print working directory
         run: pwd
 
@@ -42,4 +32,4 @@ jobs:
         run: ls -al ./ds_client
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0 -f ./ds_client/Dockerfile ./ds_client
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0 -f ./ds_client/Dockerfile ./ds_client | docker push ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0
