--- a/.github/workflows/database.yml
+++ b/.github/workflows/database.yml
@@ -32,7 +32,7 @@ jobs:
         run: ls -al ./ds_database
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ds_database:1.0 -f ./ds_backend/Dockerfile ./ds_database
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ds_database:1.0 -f ./ds_database/Dockerfile ./ds_database
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/ds_database:1.0
