--- a/.github/workflows/backend-merge.yml
+++ b/.github/workflows/backend-merge.yml
@@ -1,4 +1,4 @@
-name: Backend
+name: Backend development merge
 
 on:
   push:
@@ -8,7 +8,6 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
