--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -31,8 +31,14 @@ jobs:
       - name: Print working directory
         run: pwd
 
-      - name: List files in current directory
+      - name: list files in current directory
         run: ls -al
+
+      - name: list files in terraform directory
+        run: ls -al ./terraform-frastructure
+
+      - name: list files in root
+        run: ls -al ~
 
       - name: terraform init
         run: terraform init
