Updated cicd to move to folder before running terraform apply

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -35,7 +35,7 @@ jobs:
         run: ls -al
 
       - name: list files in terraform directory
-        run: ls -al ./terraform-frastructure
+        run: ls -al ./terraform-ifrastructure
 
       - name: list files in root
         run: ls -al ~
