--- a/.github/workflows/backend-merge.yml
+++ b/.github/workflows/backend-merge.yml
@@ -31,7 +31,7 @@ jobs:
         run: ls -al ./ds_server
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ds_server:1.0 -f ./ds_server/Dockerfile ./ds_server
+        run: docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/ds_server:1.0 -f ./ds_server/Dockerfile ./ds_server
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/ds_server:1.0
