--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -10,29 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: checkit out
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
+      - name: docker build setup
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub
+      - name: login to dockerhub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Print working directory
+      - name: pwd
         run: pwd
 
-      - name: List files in current directory
+      - name: list files in current directory
         run: ls -al
 
-      - name: List files in ds_client directory
+      - name: list files in ds_client directory
         run: ls -al ./ds_client
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0 -f ./ds_client/Dockerfile ./ds_client
+      - name: build image
+        run: docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0 -f ./ds_client/Dockerfile ./ds_client
 
-      - name: Push Docker image
+      - name: push image to dockerhub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0
