--- a/server-backend-helm-chart/HELM/templates/backend-deployment.yaml
+++ b/server-backend-helm-chart/HELM/templates/backend-deployment.yaml
@@ -19,6 +19,19 @@ spec:
           imagePullPolicy: {{ .Values.backendImage.pullPolicy }}
           ports:
           - containerPort: {{ .Values.backendService.containerPort }}
+          env:
+          - name: MONGO_INITDB_ROOT_USERNAME
+            value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME }}
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }}
+          - name : MONGO_INITDB_DATABASE
+            value: {{ .Values.mongodbEnv.MONGO_INITDB_DATABASE }}
+          - name: DATABASE_HOST
+            value: "{{ toString .Values.mongodbEnv.DATABASE_HOST }}"
+          - name: DATABASE_PORT
+            value: "{{ toString .Values.mongodbEnv.DATABASE_PORT }}"
+          - name: DATABASE_COLLECTION
+            value: {{ .Values.mongodbEnv.DATABASE_COLLECTION }}
       restartPolicy: {{ .Values.backendImage.restartPolicy }}
 ---
 apiVersion: v1
