--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ terraform.tfstate.backup
 
 server-backend-helm-chart/backend_log_1.txt
 server-backend-helm-chart/backend_log_2.txt
+server-backend-helm-chart/backend_log_1_new.txt
+server-backend-helm-chart/mongodb_log_new.txt
