Made minor tweaks for cleaner code + identify what works

--- a/server-backend-helm-chart/HELM/values-dev.yaml
+++ b/server-backend-helm-chart/HELM/values-dev.yaml
@@ -41,6 +41,6 @@ mongodbEnv:
   MONGO_INITDB_ROOT_USERNAME: "ds_root"
   MONGO_INITDB_ROOT_PASSWORD: "ds_password"
   MONGO_INITDB_DATABASE: "messages"
-  DATABASE_HOST: "127.0.0.1"
+  DATABASE_HOST: 127.0.0.1
   DATABASE_PORT: "27017"
   DATABASE_COLLECTION: "messages"
