--- a/server-backend-helm-chart/HELM/templates/backend-deployment.yaml
+++ b/server-backend-helm-chart/HELM/templates/backend-deployment.yaml
@@ -27,9 +27,9 @@ spec:
           - name : MONGO_INITDB_DATABASE
             value: {{ .Values.mongodbEnv.MONGO_INITDB_DATABASE }}
           - name: DATABASE_HOST
-            value: "{{ toString .Values.mongodbEnv.DATABASE_HOST }}"
+            value: {{ toString .Values.mongodbEnv.DATABASE_HOST }}
           - name: DATABASE_PORT
-            value: "{{ toString .Values.mongodbEnv.DATABASE_PORT }}"
+            value: "27017" # for some reason trying to call it from values causes bug
           - name: DATABASE_COLLECTION
             value: {{ .Values.mongodbEnv.DATABASE_COLLECTION }}
       restartPolicy: {{ .Values.backendImage.restartPolicy }}
