Add missing indentation to env blocks in backend-deployment and mongodb-deployment

--- a/server-backend-helm-chart/HELM/templates/backend-deployment.yaml
+++ b/server-backend-helm-chart/HELM/templates/backend-deployment.yaml
@@ -20,18 +20,18 @@ spec:
           ports:
           - containerPort: {{ .Values.backendService.containerPort }}
           env:
-          - name: MONGO_INITDB_ROOT_USERNAME
-            value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME }}
-          - name: MONGO_INITDB_ROOT_PASSWORD
-            value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }}
-          - name : MONGO_INITDB_DATABASE
-            value: {{ .Values.mongodbEnv.MONGO_INITDB_DATABASE }}
-          - name: DATABASE_HOST
-            value: {{ .Values.mongodbEnv.DATABASE_HOST | quote }}
-          - name: DATABASE_PORT
-            value: {{ .Values.mongodbEnv.DATABASE_PORT | quote }} # for some reason trying to call it from values causes bug
-          - name: DATABASE_COLLECTION
-            value: {{ .Values.mongodbEnv.DATABASE_COLLECTION }}
+            - name: MONGO_INITDB_ROOT_USERNAME
+              value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME }}
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }}
+            - name : MONGO_INITDB_DATABASE
+              value: {{ .Values.mongodbEnv.MONGO_INITDB_DATABASE }}
+            - name: DATABASE_HOST
+              value: {{ .Values.mongodbEnv.DATABASE_HOST | quote }}
+            - name: DATABASE_PORT
+              value: {{ .Values.mongodbEnv.DATABASE_PORT | quote }}
+            - name: DATABASE_COLLECTION
+              value: {{ .Values.mongodbEnv.DATABASE_COLLECTION }}
       restartPolicy: {{ .Values.backendImage.restartPolicy }}
 ---
 apiVersion: v1
