--- a/server-backend-helm-chart/HELM/templates/mongodb-deployment.yaml
+++ b/server-backend-helm-chart/HELM/templates/mongodb-deployment.yaml
@@ -11,18 +11,18 @@ spec:
       ports:
       - containerPort: {{ .Values.mongodbService.containerPort }}
       env:
-      - name: MONGO_INITDB_ROOT_USERNAME
-        value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME }}
-      - name: MONGO_INITDB_ROOT_PASSWORD
-        value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }}
-      - name : MONGO_INITDB_DATABASE
-        value: {{ .Values.mongodbEnv.MONGO_INITDB_DATABASE }}
-      - name: DATABASE_HOST
-        value: "{{ toString .Values.mongodbEnv.DATABASE_HOST }}"
-      - name: DATABASE_PORT
-        value: "{{ toString .Values.mongodbEnv.DATABASE_PORT }}"
-      - name: DATABASE_COLLECTION
-        value: {{ .Values.mongodbEnv.DATABASE_COLLECTION }}
+        - name: MONGO_INITDB_ROOT_USERNAME
+          value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME }}
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          value: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD }}
+        - name : MONGO_INITDB_DATABASE
+          value: {{ .Values.mongodbEnv.MONGO_INITDB_DATABASE }}
+        - name: DATABASE_HOST
+          value: {{ .Values.mongodbEnv.DATABASE_HOST | quote }}
+        - name: DATABASE_PORT
+          value: {{ .Values.mongodbEnv.DATABASE_PORT | quote }}
+        - name: DATABASE_COLLECTION
+          value: {{ .Values.mongodbEnv.DATABASE_COLLECTION }}
 
       volumeMounts:
       - name: {{ .Values.mongodbVolume.name }}
@@ -44,4 +44,4 @@ spec:
   - protocol: TCP
     port: {{ .Values.mongodbService.port }}
     targetPort: {{ .Values.mongodbService.targetPort }}
-  type: ClusterIP
+  clusterIP: None
