--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -32,13 +32,16 @@ jobs:
         run: pwd
 
       - name: list files in current directory
-        run: ls -al
+        run: ls
 
       - name: list files in terraform directory
         run: ls -al ./terraform-infrastructure
 
       - name: move to terraform-infrastrucure directory
         run: cd ./terraform-infrastructure
+
+      - name: list files in current directory
+        run: ls
 
       - name: terraform init
         run: terraform init
