Check peipeline permissions

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -29,11 +29,8 @@ jobs:
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
 
-      - name: Print working directory
-        run: pwd
-
-      - name: list files in current directory
-        run: ls
+      - name: check permissions
+        run: aws s3 ls
 
       - name: list files in terraform directory
         run: ls -al ./terraform-infrastructure
