--- a/.github/workflows/backend-push.yml
+++ b/.github/workflows/backend-push.yml
@@ -39,6 +39,10 @@ jobs:
           node-version: "20.x"
 
       # frontend
+      - name: check path
+        run: |
+          cd ../../ds_client
+          ls
       - name: install dependencies in frontend
         run: |
           cd ../../ds_client
