--- a/.github/workflows/backend-push.yml
+++ b/.github/workflows/backend-push.yml
@@ -21,7 +21,7 @@
 name: Initial branch push
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       # - "feature/*"
       # - "bug/*"
